福島Project/src/objects/JFK_CommonM__c.object
<CustomObject>
    <description>JFK</description>
    <fields>
        <fullName>BunruiMeisyo__c</fullName>
        <label>分類名称</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>コード</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortBango__c</fullName>
        <description>各項目を並べ替えるときに使用する番号</description>
        <label>Sort番号</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>汎用M</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>BunruiMeisyo__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>名称</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Contact_00NN0000000ZtWxMAK</fullName>
        <active>true</active>
        <field>Contact.KoyoSyurui__c</field>
        <filterItems>
            <field>JFK_CommonM__c.BunruiMeisyo__c</field>
            <operation>equals</operation>
            <value>雇用種類</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>取引先責任者_雇用種類</name>
    </namedFilters>
    <namedFilters>
        <fullName>Contact_00NN0000000ZtnXMAS</fullName>
        <active>true</active>
        <field>Contact.KoyoKBN__c</field>
        <filterItems>
            <field>JFK_CommonM__c.BunruiMeisyo__c</field>
            <operation>equals</operation>
            <value>雇用区分</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>取引先責任者_雇用区分</name>
    </namedFilters>
    <namedFilters>
        <fullName>Contact_00NN0000000ZtncMAC</fullName>
        <active>true</active>
        <field>Contact.KoyoKeitai__c</field>
        <filterItems>
            <field>JFK_CommonM__c.BunruiMeisyo__c</field>
            <operation>equals</operation>
            <value>雇用形態</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>取引先責任者_労働時間</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I10000000WpXpEAK_00NN0000000ZtqHMAS</fullName>
        <active>true</active>
        <field>JFK_Bosyu__c.KoyoKBN__c</field>
        <filterItems>
            <field>JFK_CommonM__c.BunruiMeisyo__c</field>
            <operation>equals</operation>
            <value>雇用区分</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>募集_雇用区分</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I10000000WpXpEAK_00NN0000000ZtqMMAS</fullName>
        <active>true</active>
        <field>JFK_Bosyu__c.KoyoKeitai__c</field>
        <filterItems>
            <field>JFK_CommonM__c.BunruiMeisyo__c</field>
            <operation>equals</operation>
            <value>雇用形態</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>募集_労働時間</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I10000000WpXpEAK_00NN0000000ZttGMAS</fullName>
        <active>true</active>
        <field>JFK_Bosyu__c.JigyosyoKBN__c</field>
        <filterItems>
            <field>JFK_CommonM__c.BunruiMeisyo__c</field>
            <operation>equals</operation>
            <value>事業所区分</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>募集_事業所区分</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I10000000WpXuEAK_00NN0000000ZtNyMAK</fullName>
        <active>true</active>
        <field>JFK_JigyosyoTR__c.JigyoKBN__c</field>
        <filterItems>
            <field>JFK_CommonM__c.BunruiMeisyo__c</field>
            <operation>equals</operation>
            <value>事業所区分</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>事業所(支給/実績)_事業区分</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I10000000Wq6qEAC_00NN0000000aYK7MAM</fullName>
        <active>true</active>
        <field>JFK_RodoSyaTR__c.Zenki_KoyoKeitai__c</field>
        <filterItems>
            <field>JFK_CommonM__c.BunruiMeisyo__c</field>
            <operation>equals</operation>
            <value>雇用形態</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>労働者TR_前期雇用形態</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I10000000Wq6qEAC_00NN0000000aYLPMA2</fullName>
        <active>true</active>
        <field>JFK_RodoSyaTR__c.Henko_KoyoKeitai__c</field>
        <filterItems>
            <field>JFK_CommonM__c.BunruiMeisyo__c</field>
            <operation>equals</operation>
            <value>雇用形態</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>労働者TR_変更雇用形態</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IN0000000CvSMMA0_00NN0000000ZuXVMA0</fullName>
        <active>true</active>
        <field>JFK_CheckSheetTR__c.CheckSheetName__c</field>
        <filterItems>
            <field>JFK_CommonM__c.BunruiMeisyo__c</field>
            <operation>equals</operation>
            <value>審査シート</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>審査シートM_審査シート名</name>
    </namedFilters>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>